--- a/internship.html
+++ b/internship.html
@@ -41,11 +41,23 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/Traveloka/743999698545130-pim-internship'>Traveloka PIM Internship | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://ajg.referrals.selectminds.com/jobs/corporate-intern-20166'>Corporate Intern - Gallagher Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://ajg.referrals.selectminds.com/jobs/corporate-intern-20167'>Corporate Intern - Gallagher Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='https://jobs.lever.co/loft/0e371604-98a4-4c04-95aa-6ceaa9e33a03'>Loft - FP&A Intern</a></h5> 
 <p><span class="badge badge-light">S?o Paulo Brazil</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/loft/be2c87c7-6032-4691-9db8-15553fd4c7b2'>Loft - Investor Relations Intern</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/loft/be2c87c7-6032-4691-9db8-15553fd4c7b2'>Loft - Investor Relations Intern</a></h5> 
 <p><span class="badge badge-light">S?o Paulo Brazil</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -61,7 +73,7 @@
 <p><span class="badge badge-light">Vietnam  Seattle, Washington</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698541385--internship-supply-chain-management-intern'>Bosch Group [Internship] Supply Chain Management Intern | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698541385--internship-supply-chain-management-intern'>Bosch Group [Internship] Supply Chain Management Intern | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Ho Chi Minh Vietnam  Vietnam</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -133,7 +145,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://worknola.com/job/324421/artistic-marketing--communications-intern'>Artistic Marketing + Communications Intern | WorkNOLA</a></h5> 
+<h5><a href='https://worknola.com/job/324421/artistic-marketing--communications-intern'>Artistic Marketing + Communications Intern | WorkNOLA</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -209,7 +221,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://onedot.join.com/jobs/470783-data-analyst-intern'>Job @ Onedot (Schlieren): Data Analyst Intern | JOIN</a></h5> 
+<h5><a href='https://onedot.join.com/jobs/470783-data-analyst-intern'>Job @ Onedot (Schlieren): Data Analyst Intern | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -295,7 +307,7 @@
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/imoim/jobs/1549904'>Job Application for Software Engineering Intern at imo.im</a></h5> 
+<h5><a href='https://boards.greenhouse.io/imoim/jobs/1549904'>Job Application for Software Engineering Intern at imo.im</a></h5> 
 <p><span class="badge badge-light">Palo Alto  Palo Alto, California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -311,7 +323,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://idealo.join.com/jobs/471787-system-engineer-databases-m-oder-w-oder-x'>Job @ idealo internet (Berlin): System Engineer - ... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://idealo.join.com/jobs/471787-system-engineer-databases-m-oder-w-oder-x'>Job @ idealo internet (Berlin): System Engineer - ... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Deutschland</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -331,7 +343,7 @@
 <p><span class="badge badge-light">Italy</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tetratech.referrals.selectminds.com/jobs/intern-%E2%80%93-water-resources-planner-15782'>Intern ? Water Resources Planner - Tetra Tech Careers</a></h5> 
+<h5><a href='https://tetratech.referrals.selectminds.com/jobs/intern-%E2%80%93-water-resources-planner-15782'>Intern ? Water Resources Planner - Tetra Tech Careers</a></h5> 
 <p><span class="badge badge-light">St. Paul, Minnesota United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -351,7 +363,7 @@
 <p><span class="badge badge-light">Austin Austin  Austin, TX</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TalentGenGlobalUSA/743999698522823-web-design-developer-intern-virtual-great-reference-portfolio-building'>TalentGen Global, USA Web Design/Developer, Intern (virtual) GREAT reference portfolio building | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TalentGenGlobalUSA/743999698522823-web-design-developer-intern-virtual-great-reference-portfolio-building'>TalentGen Global, USA Web Design/Developer, Intern (virtual) GREAT reference portfolio building | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Houston, TX</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -446,18 +458,6 @@
 <h5><a href='https://www.qreer.com/jobs/view/12203/graduation-assignment-redesign-the-projection-grating-module'>Graduation assignment: Redesign the projection grating module .. Internship in Veldhoven, Netherlands</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
-<hr/>
-<h5><a href='https://producthire.net/job/intern-growth-marketing/'>Intern - Growth Marketing | PRODUCTHIRE.NET</a></h5> 
-<p><span class="badge badge-light">Santa Clara, California  Palo Alto</span></p>
-<p>Posted on:: 2019-10-30</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/ppgreatplains/ad6969c2-16e0-4222-931c-d9e331aba83f'>Planned Parenthood Great Plains - Human Resources Intern</a></h5> 
-<p><span class="badge badge-light">Overland Park, KS</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/nisc/jobs/1932995'>Job Application for Intern - Meeting & Event Planning  at National Information Solutions Cooperative (NISC)</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-30</p>
 <hr/>
 
 
